--- a/css/main.css
+++ b/css/main.css
@@ -827,6 +827,7 @@ a:not(.button, .project-grid li a):hover{
 }
 
 .menu-button{
+  display: inline;
   height: 1.25rem;
   width: 1.25rem;
   cursor: pointer;
